2004-08-03  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b89

	* Fix: Bug #1002883  Albums could be renamed to include a 
		% character in the name which is interpreted as 
		an escape character and causes all kinds of issues

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b88

        * Fix: Extract _FILES in phpBB2's modules.php

        * Change: Remove modules.php.gz, add modules.php so that we can track
          code changes.  There's no real reason for it to be gzip'ed.
          - Updated HowTo.txt and removed 'unzip'...

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b87

	* Fix: multi_create was b0rked

2004-08-02  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b86

	* Change:  Modify all popups to have the same CSS tags so that
		they will look more uniform and look better with skins.

	* Fix: misc. html cleanup including removing center tags and
		replacing with align="center"

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b85

	* Fix: Correct logic in _getStyleSheetLinks 

2004-08-02  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b84

	* Change: Added "Return to Gallery" link to find_orphans.php

2004-08-02  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.5-cvs-b83

	* Fixed phpBB2 integration (I'd missed the big superglobals change before).
	* Fixed version number (b82 didn't bump).

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b82

        * Fix: Correct the check_exec function which was being a little too liberal
          in its regex for exec.  (shell_exec was incorrectly labeled as 'exec')

        * Fix: Don't display clickable dimensions for movies

        * Fix: Stack the custom fields on top of each other - users were
          really displeased by the side-by-side view

        * Fix: The admin options on root albums were displaying inside the
          Mambo UI.

2004-07-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b81
