@@ -1,3 +1,8 @@
+2004-08-04  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-90
+
+	* Change: When user wants photo captions to be filedate,
+	  then now the format from config is used.
+
 2004-08-03  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b89
 
 	* Fix: Bug #1002883  Albums could be renamed to include a 
